# bankai

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.certbot  Dockerfile.daemon  Makefile  README.md  Scarb.toml  committee_input.json  db_structure.sql  docker-compose.sepolia.yml  docker-compose.yml  dynamic_params.json  epoch_batch_input.json  input.json  main_input.json  nimbus_sepl.sh  package.json  tsconfig.json
cairo/cairo_runner/: Cargo.toml
cairo/cairo_runner/src/: committee_update.rs  epoch_batch.rs  epoch_update.rs  error.rs  hint_processor.rs  lib.rs  main.rs  types.rs
client-rs/: Cargo.toml  Dockerfile  db_structure.sql  docker-compose.dev.yml  epoch.json  light_client_update.json  plan.md
client-rs/crates/api/: Cargo.toml
client-rs/crates/api/src/: main.rs  types.rs  utils.rs
client-rs/crates/api/src/handlers/: dashboard.rs  debug.rs  decommitment.rs  epoch_decommitment.rs  mod.rs  utils.rs
client-rs/crates/api/src/routes/: dashboard.rs  debug.rs  decommitment.rs  epoch_decommitment.rs  mod.rs  utils.rs
client-rs/crates/atlantic-client/: Cargo.toml
client-rs/crates/atlantic-client/src/: mod.rs
client-rs/crates/beacon-client/: Cargo.toml
client-rs/crates/cli/: Cargo.toml
client-rs/crates/cli/src/: main.rs
client-rs/crates/clients/: Cargo.toml
client-rs/crates/clients/src/: beacon.rs  lib.rs  starknet.rs
client-rs/crates/core/: Cargo.toml
client-rs/crates/core/src/: lib.rs
client-rs/crates/core/src/cairo_runner/: mod.rs  python.rs  rust.rs
client-rs/crates/core/src/clients/: atlantic.rs  beacon_chain.rs  mod.rs  starknet.rs  transactor.rs
client-rs/crates/core/src/db/: manager.rs  mod.rs  state.rs
client-rs/crates/core/src/types/: error.rs  job.rs  mod.rs  traits.rs
client-rs/crates/core/src/utils/: config.rs  constants.rs  helpers.rs  merkle.rs  mod.rs
client-rs/crates/daemon/: Cargo.toml
client-rs/crates/daemon/src/: daemon.rs  error.rs  main.rs
client-rs/crates/daemon/src/job_manager/: broadcast.rs  mod.rs  resume.rs  retry.rs
client-rs/crates/daemon/src/job_processor/: broadcast.rs  epoch_batch.rs  processor.rs  proof.rs  scheduler.rs  (+1 more)
client-rs/crates/db/: Cargo.toml
client-rs/crates/db/src/: database_manager.rs  lib.rs
client-rs/crates/deamon/: Cargo.toml
client-rs/crates/proofs/: Cargo.toml
client-rs/crates/proofs/src/: contract_init.rs  epoch_batch.rs  lib.rs  mod.rs  sync_committee.rs
client-rs/crates/starknet-client/: Cargo.toml
client-rs/crates/starknet-client/src/: mod.rs
client-rs/crates/transactor/: Cargo.toml
client-rs/crates/transactor/src/: transactor.rs
client-rs/crates/types/: Cargo.toml
client-rs/crates/types/src/: contract.rs  error.rs  lib.rs  mod.rs  traits.rs
client-rs/crates/utils/: Cargo.toml
client-rs/crates/utils/src/: helpers.rs  lib.rs  merkle.rs
client-rs/migrations/: 000_create_migrations_table.sql  002_make_batch_range_nullable.sql
client-rs/scripts/: entrypoint.sh  run-migrations.sh  wait-for-postgres.sh
client-rs/src/: bankai_client.rs  config.rs  constants.rs  contract_init.rs  daemon.rs  epoch_batch.rs  epoch_update.rs  execution_header.rs  helpers.rs  main.rs  rpc.rs  state.rs  sync_committee.rs  traits.rs  types.rs
client-rs/src/routes/: dashboard.rs  mod.rs
client-rs/src/utils/: atlantic_client.rs  bankai_rpc_client.rs  cairo_runner.rs  database_manager.rs  events.rs  hashing.rs  merkle.rs  mod.rs  rpc.rs  starknet_client.rs  transactor_client.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs  types.rs  utils.rs
crates/api/src/handlers/: dashboard.rs  debug.rs
crates/api/src/routes/: debug.rs  mod.rs
crates/cairo_runner/: Cargo.toml
crates/cairo_runner/src/: committee_update.rs  epoch_batch.rs  epoch_update.rs  error.rs  hint_processor.rs  lib.rs  main.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  error.rs  main.rs
crates/daemon/src/beacon_listener/: listener.rs  mod.rs
crates/daemon/src/job_manager/: resume.rs  retry.rs
crates/daemon/src/job_processor/: broadcast.rs  epoch_batch.rs  mod.rs  processor.rs  proof.rs  scheduler.rs  sync_committee.rs
tests/: Cargo.toml  main.rs
tests/fixtures/committee/6914048/: input_6914048.json
tests/fixtures/committee/6922240/: input_6922240.json
tests/fixtures/committee/6928352/: input_6928352.json
tests/fixtures/committee/6931425/: input_6931425.json
tests/fixtures/committee/6939616/: input_6939616.json
tests/fixtures/committee/6947808/: input_6947808.json
tests/fixtures/committee/6956000/: input_6956000.json
tests/fixtures/committee/6964192/: input_6964192.json
tests/fixtures/committee/6972384/: input_6972384.json
tests/fixtures/committee/6980576/: input_6980576.json
tests/fixtures/committee/6988768/: input_6988768.json
tests/fixtures/committee/6996960/: input_6996960.json
tests/fixtures/committee/7005152/: input_7005152.json
tests/fixtures/committee/7013344/: input_7013344.json
tests/fixtures/committee/7021536/: input_7021536.json
tests/fixtures/committee/7029728/: input_7029728.json
tests/fixtures/committee/7037920/: input_7037920.json
tests/fixtures/committee/7047136/: input_7047136.json
tests/fixtures/committee/7056352/: input_7056352.json
tests/fixtures/committee/7063520/: input_7063520.json
tests/fixtures/committee/7073760/: input_7073760.json
tests/fixtures/committee/7078880/: input_7078880.json
tests/fixtures/committee/7087072/: input_7087072.json
tests/fixtures/committee/7096288/: input_7096288.json
tests/fixtures/committee/7110624/: input_7110624.json
tests/fixtures/committee/7112672/: input_7112672.json
tests/fixtures/epoch_batch/215810_to_215841/: input_batch_215810_to_215841.json
tests/fixtures/epoch_batch/215970_to_216001/: input_batch_215970_to_216001.json
tests/fixtures/epoch_batch/216002_to_216033/: input_batch_216002_to_216033.json
tests/fixtures/epoch_batch/216034_to_216063/: input_batch_216034_to_216063.json
tests/fixtures/epoch_batch/216064_to_216095/: input_batch_216064_to_216095.json
(+145 files in other folders)
