[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/api",
    "crates/daemon",
    "crates/cairo_runner",
]
exclude = ["tests"]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-chrono-0_4"] }

# Web & API
axum = "0.7.9"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
postgres-types = { version = "0.2.8", features = ["derive"] }

# Crypto & Blockchain
starknet = "0.12.0"
starknet-crypto = "0.7.3"
bls12_381 = "0.8.0"
beacon-state-proof = { git = "https://github.com/petscheit/beacon-state-proof", rev = "9dddb71f2b037d68097bf50c0a7b02229bf4c3e2" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v2.0.0", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
beacon_types = { git = "https://github.com/petscheit/lighthouse.git", package = "types", rev = "2ef065a16"}
alloy-primitives = "0.8.13"
alloy-rpc-types-beacon = "0.7.2"
tree_hash = "0.8"
tree_hash_derive = "0.8"

# Utils
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
num-bigint = "0.4.1"
num-traits = "0.2.19"
num_cpus = "1.16.0"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.5"
itertools = "0.13.0"
glob = "0.3.2"

# Error Handling & Logging
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

# Development
dotenv = "0.15"
clap = { version = "4.5.22", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

# Async Utils
futures = "0.3"
futures-util = "0.3.31"

# Local Dependencies
garaga-zero-hints = { path = "../cairo/packages/garaga-zero/hints/rust-vm" }
bankai-core = { path = "crates/core" }
bankai-cli = { path = "crates/cli" }
bankai-api = { path = "crates/api" }
bankai-daemon = { path = "crates/daemon" }
bankai-runner = { path = "crates/cairo_runner" }
