[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.13"
hex = "0.4.3"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
beacon-state-proof = { git = "https://github.com/petscheit/beacon-state-proof" }
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["json"] }
