[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.13"
ethereum_serde_utils = "0.7.0"
hex = "0.4.3"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
beacon-state-proof = { git = "https://github.com/petscheit/beacon-state-proof" }
types = { path = "../../lighthouse/consensus/types", package = "types" }
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
rand = "0.8.5"
alloy-rpc-types-beacon = "0.7.2"
itertools = "0.13.0"
bls12_381 = "0.8.0"
clap = { version = "4.5.22", features = ["derive"] }
starknet = "0.12.0"
tree_hash_derive = "0.8.0"
tree_hash = "0.8.0"
dotenv = "0.15"