[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
alloy-primitives = "0.8.13"
ethereum_serde_utils = "0.7.0"
hex = "0.4.3"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
beacon-state-proof = { git = "https://github.com/petscheit/beacon-state-proof" }
types = { git = "https://github.com/petscheit/lighthouse.git", package = "types" }
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
rand = "0.8.5"
alloy-rpc-types-beacon = "0.7.2"
itertools = "0.13.0"
bls12_381 = "0.8.0"
clap = { version = "4.5.22", features = ["derive"] }
starknet = "0.12.0"
tree_hash_derive = "0.8.0"
tree_hash = "0.8.0"
dotenv = "0.15"
tokio-postgres = { version = "0.7.12", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
axum = "0.7.9"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-stream = "0.1.17"
futures = "0.3"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
postgres-types = { version = "0.2.8", features = ["derive"] }
num_cpus = "1.16.0"


starknet-crypto = "0.7.3"
glob = "0.3.2"
num-traits = "0.2.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio-util = "0.7.13"
