[package]
name = "bankai-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bankai-tests"
path = "main.rs"

[dependencies]
bankai-core = { path = "../crates/core" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
walkdir = "2.4.0" 
futures = "0.3.31"
num_cpus = "1.16.0"

