[package]
name = "bankai-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
garaga-zero-hints = { git = "https://github.com/petscheit/garaga-zero", branch = "chore/change_requests" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v2.0.0-rc4", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
thiserror = "2.0.12"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
num-bigint = "0.4.1"
hex = "0.4.3"
beacon_types = { git = "https://github.com/petscheit/lighthouse.git", package = "types" }
