[package]
name = "bankai-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bankai-api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
bankai-core.workspace = true
uuid.workspace = true
num-traits.workspace = true