[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bankai-core.workspace = true
bankai-runner.workspace = true
beacon-state-proof.workspace = true
starknet.workspace = true
clap.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true