[package]
name = "bankai-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bankai-daemon"
path = "src/main.rs"

[dependencies]
bankai-core.workspace = true
beacon-state-proof.workspace = true
starknet.workspace = true
tokio.workspace = true
axum.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
postgres-types.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true
alloy-rpc-types-beacon.workspace = true
serde_json.workspace = true
async-tungstenite.workspace = true
futures-util.workspace = true
num-traits.workspace = true
thiserror.workspace = true