[package]
name = "bankai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core.workspace = true
beacon-state-proof.workspace = true
starknet.workspace = true
clap.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true