[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bankai-core.workspace = true
beacon-state-proof.workspace = true
starknet.workspace = true
clap.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# These need to be pinned to make the lighthouse fork work
crate_crypto_kzg_multi_open_fk20.workspace = true
rust_eth_kzg.workspace = true
crate_crypto_internal_eth_kzg_bls12_381.workspace = true
crate_crypto_internal_eth_kzg_erasure_codes.workspace = true
crate_crypto_internal_eth_kzg_maybe_rayon.workspace = true
crate_crypto_internal_eth_kzg_polynomial.workspace = true