[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives.workspace = true
bls12_381.workspace = true
sha2.workspace = true
tracing.workspace = true
serde.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
tokio.workspace = true
reqwest.workspace = true