[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
bls12_381.workspace = true
sha2.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-postgres.workspace = true
reqwest.workspace = true
beacon-state-proof.workspace = true
beacon_types.workspace = true
hex.workspace = true
itertools.workspace = true
chrono.workspace = true
num-traits.workspace = true
uuid.workspace = true
futures.workspace = true
dotenv.workspace = true
postgres-types.workspace = true
glob.workspace = true