[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres-types.workspace = true
starknet.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
num-traits.workspace = true
tokio-postgres.workspace = true
alloy-primitives.workspace = true
proofs.workspace = true
utils.workspace = true