[package]
name = "proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
types.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
bls12_381.workspace = true
tree-hash-derive.workspace = true
tree-hash.workspace = true
hex.workspace = true
num_traits.workspace = true
serde.workspace = true
sha2.workspace = true
starknet.workspace = true
starknet_crypto.workspace = true
uuid.workspace = true
tracing.workspace = true